[package]
name = "rust-libpbc"
version = "0.1.0"
authors = ["Eugene Chupriyanov <tchu@tchu.ru>"]
links = "pbc"
build = "build.rs"

[dependencies]
rust-gmp = "0.5.0"
sha3 = "0.8.0"
rand = "0.5"
generic-array = "0.12.0"
typenum = "1.10.0"

[[example]]
name = "echo-test"

[build-dependencies]
bindgen = "0.42.1"
cc = "1.0.25"
