[package]
name = "libpbc-sys"
version = "0.1.0"
authors = ["Eugene Chupriyanov <tchu@tchu.ru>"]
build = "build.rs"
categories = ["cryptography"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "crypto"]
license = "MIT"
links = "pbc"
repository = "https://github.com/stegos/rust-libpbc-sys"
description = "Rust interface for The Pairing-Based Cryptography Library"

[dev-dependencies]
generic-array = "0.12.0"
rand = "0.6"
rust-gmp = "0.5.0"
sha3 = "0.8"
typenum = "1.10.0"

[build-dependencies]
bindgen = "0.46"
cc = "1.0"
